<resources>
    <string name="app_name">SocialFeed</string>
    <string name="body">  That hard work is a key to success is a well-known adage. Parents, teachers as well as others guide a child to work hard so that he can achieve good scores. Though a little bit of luck plays a positive role but I believe that hard work is the key to success. In fact if only luck is to be considered, no one would work but just wait till their luck shines up. But this is not the case. Today we see that technology has improved to such an extent that a person can have a lunch in Paris and a dinner in New York on the same day. There lies great contributions from people like the Wright brothels and Henry Ford to invent these means of transportation, which were the result of their hard-work arid great efforts. If these people had waited for the D-day probably we could still have been using fire and wood to cook instead of using electrical ovens, and the globalization would not have taken effect. A person can excel in his career due to hard work. If he sits at home, no one would offer him a job unless he initiates the job searching process. Also if you are working in a company you will be promoted only because of working hard; luck does not lie in the picture. A student stands out first only if he studies hard. Many students after the graduation say that probably they were not lucky enough to get good marks, or the evaluators must have marked their papers strictly. But again these are meroly reasons that can\'t be given preference. Today science has developed so much that hand shaking can be virtually done between any two countries.This is due to the tremendous amount of researches accomplished by scientists. All achievements in science and technology am because of hard work contributed by people in different fields. Thus a young individual has the potential to do something and crave in reaching a particular acme. Whether your luck prevails or not condition being hard work and efforts, which will pick you up wherever you are.</string>

    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="aboutUs">About Us</string>

    <string-array name="settings">
        <item>@string/notification</item>
        <item>@string/logout</item>
        <item>@string/aboutUs</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1772866129643639</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_login_with_gmail">Login With Gmail</string>
    <string name="btn_login_with_facebook">Login With Facebook</string>
    <string name="btn_login_with_email">Login With Email</string>
    <string name="btn_create_account">Create Account</string>


</resources>
