<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.internship.socialfeed.authentication.AuthenticationActivity">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_with_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textColor="#ffffff"
        android:background="#3b5998"
        android:id="@+id/btnFbLogin"
        android:padding="8dp"
        android:drawableLeft="@drawable/drawable_fb_icon"

        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_with_gmail"
        android:layout_alignLeft="@+id/btnFbLogin"
        android:layout_below="@+id/btnFbLogin"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:background="#c71610"
        android:id="@+id/btnGmailLogin"
        android:padding="8dp"
        android:drawableLeft="@drawable/drawable_google_icon"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_with_email"
        android:layout_alignLeft="@+id/btnGmailLogin"
        android:layout_below="@+id/btnGmailLogin"
        android:background="#ff9a26"
        android:layout_marginTop="10dp"
        android:id="@+id/btnEmailLogin"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"
        android:layout_alignLeft="@+id/btnEmailLogin"
        android:layout_below="@+id/btnEmailLogin"
        android:layout_marginTop="50dp"
        android:background="#1ef2ac"
        android:textColor="#ffffff"
        android:id="@+id/btnRegister"
        />

</RelativeLayout>
